@@ -46,6 +46,11 @@ subprojects {
                 standardInput = System.in
             }
         }
+        withType(Test).tap {
+            configureEach {
+                jvmArgs += '--enable-preview'
+            }
+        }
     }
 
     dependencies {
@@ -61,12 +66,12 @@ subprojects {
         testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
         testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
     }
+
+    test {
+        useJUnitPlatform()
+    }
 }
 
 tasks.register('jarAll') {
     dependsOn ':manager:shadowJar', ':server:shadowJar', ':bundle:shadowJar'
-}
-
-test {
-    useJUnitPlatform()
 }
